# pureMD5

./: .gitignore  CHANGES  MD5.rolled.hs  MD5.unroll.hs  NOTES  README.md  pureMD5.cabal  renovate.json
.github/workflows/: haskell-actions.yml
Data/Digest/Pure/: MD5.hs
Test/: Bench.hs  MD5.hs  main.hs  md5test.hs
src/: MD5.hs
src/MD5/: Rolled.hs
