cabal-version: 2.4
name:		pureMD5
version:	2.1.4
license: BSD-3-Clause
license-file:	LICENSE
author:		Thomas DuBuisson <thomas.dubuisson@gmail.com>
maintainer:	Thomas DuBuisson
description:	A Haskell-only implementation of the MD5 digest (hash) algorithm.  This now supports
                the crypto-api class interface.
synopsis:	A Haskell-only implementation of the MD5 digest (hash) algorithm.
category:	Data, Cryptography
stability:	stable
build-type:	Simple
tested-with:	GHC == 7.10.3
extra-doc-files: CHANGES

flag test
  description: Build a test program
  default: False

Library
  Build-Depends:
    , base >=4.18 && <4.22
    , bytestring >=0.11 && <0.13
    , binary >=0.8.9 && <0.9
    , cereal >=0.5.8.3 && <0.6
    , crypto-api >=0.13.3 && <0.14
    , tagged >=0.8.6 && <0.9
  ghc-options:	-O2 -funfolding-use-threshold66 -funfolding-creation-threshold66 -funbox-strict-fields
  default-language: Haskell2010
  hs-source-dirs:
  exposed-modules: Data.Digest.Pure.MD5
  if arch(i386) || arch(x86_64)
    cpp-options: -DFastWordExtract

Test-Suite MD5Tests
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    build-depends:      base >=4.6 && < 5,
                        pureMD5,
                        crypto-api-tests,
                        QuickCheck,
                        test-framework >= 0.8,
                        test-framework-quickcheck2,
                        binary, cereal, pretty-hex,
                        bytestring
    ghc-options:        -Wall
    hs-source-dirs:     Test
    main-is:            main.hs

source-repository head
  type:     git
  location: https://github.com/TomMD/pureMD5
